0x03-user_authentication_service/nohup.out
127.0.0.1 - - [01/Jun/2024 22:56:55] "POST /users HTTP/1.1" 200 -
127.0.0.1 - - [01/Jun/2024 22:57:22] "POST /users HTTP/1.1" 200 -
Traceback (most recent call last):
  File "app1.py", line 10, in <module>
    from auth1 import Auth
  File "/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py", line 66
    def get_user_from_session_id()
                                 ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "app1.py", line 10, in <module>
    from auth1 import Auth
  File "/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py", line 66
    def get_user_from_session_id()
                                 ^
SyntaxError: invalid syntax
 * Serving Flask app 'app1'
 * Debug mode: on
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5000
 * Running on http://192.168.1.8:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 866-573-455
127.0.0.1 - - [02/Jun/2024 12:39:55] "POST /users HTTP/1.1" 200 -
127.0.0.1 - - [02/Jun/2024 12:40:07] "POST /sessions HTTP/1.1" 401 -
127.0.0.1 - - [02/Jun/2024 12:40:19] "POST /sessions HTTP/1.1" 401 -
127.0.0.1 - - [02/Jun/2024 12:40:46] "POST /sessions HTTP/1.1" 200 -
 * Detected change in '/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 866-573-455
 * Detected change in '/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 866-573-455
 * Detected change in '/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 866-573-455
 * Detected change in '/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/app1.py", line 10, in <module>
    from auth1 import Auth
  File "/mnt/c/Users/Active/Desktop/Coding/Short_Specializations/alx-backend-user-data/0x03-user_authentication_service/auth1.py", line 74
    if __name__ == "__main__":
    ^
IndentationError: expected an indented block
